| Summary: | ASTERISK-26575: testsuite: Need to check PJSIP functionality when res_srtp is not loaded. | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-11-10 10:29:07.000-0600 | Date Closed: | 2016-11-11 15:07:49.000-0600 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A test is needed to see that pjsip continues to work when res_srtp is not loaded/available.
Normal non-SRTP call into Asterisk that gets connected. Optimistic SRTP call into Asterisk that falls back to non-SRTP when connected. Mandatory SRTP call into Asterisk that is rejected with 488. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2016-11-11 15:07:50.954-0600 Change 4394 merged by zuul: res_pjsip_sdp_rtp: Reject offer of required SRTP without res_srtp. [https://gerrit.asterisk.org/4394|https://gerrit.asterisk.org/4394] By: Friendly Automation (friendly-automation) 2016-11-11 15:18:22.431-0600 Change 4392 merged by Joshua Colp: res_pjsip_sdp_rtp: Reject offer of required SRTP without res_srtp. [https://gerrit.asterisk.org/4392|https://gerrit.asterisk.org/4392] By: Friendly Automation (friendly-automation) 2016-11-11 16:00:19.113-0600 Change 4395 merged by zuul: pjsip/srtp_not_loaded: Add tests which cover when res_srtp is not loaded. [https://gerrit.asterisk.org/4395|https://gerrit.asterisk.org/4395] By: Friendly Automation (friendly-automation) 2016-11-11 16:09:38.130-0600 Change 4393 merged by Joshua Colp: res_pjsip_sdp_rtp: Reject offer of required SRTP without res_srtp. [https://gerrit.asterisk.org/4393|https://gerrit.asterisk.org/4393] | ||